package main.java.struction.flyweight;

/**
 * Create with IntelliJ IDEA
 * Author:YangZhao
 * Date:2024/4/6
 * Time:13:10
 */
public interface Employee {

    void report();
}
